--- a/webinstall/install/css/style.css
+++ b/webinstall/install/css/style.css
@@ -1,4 +1,5 @@
-i, em {
+i,
+em {
     font-style: normal;
 }
 
@@ -50,4 +51,30 @@ i, em {
     text-align: center;
 }
 
+.procedure-nav {
+    width: 100%;
+    height: 100px;
+    margin: 30px auto 0 auto;
+    position: relative;
+    z-index: 1;
+}
 
+.schedule-ico {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0
+}
+
+.schedule-ico span {
+    display: block;
+    width: 26px;
+    height: 26px;
+    float: left;
+    border: 1px solid #000000;
+    margin-left: 200px;
+}
+
+.schedule-ico span.a {
+    
+}
