--- a/webinstall/install/css/style.css
+++ b/webinstall/install/css/style.css
@@ -71,10 +71,158 @@ em {
     width: 26px;
     height: 26px;
     float: left;
-    border: 1px solid #000000;
-    margin-left: 200px;
+    /*border: 1px solid #000000;*/
+    margin-left: 230px;
+    background: url(../images/install_bg.png)
 }
 
 .schedule-ico span.a {
-    
+    background-position: 0 0;
+    margin-left: 50px;
+}
+
+.schedule-ico span.b {
+    background-position: -30px 0;
+}
+
+.schedule-ico span.c {
+    background-position: -60px 0;
+}
+
+.schedule-ico span.d {
+    background-position: -90px 0;
+}
+
+.schedule-line-bg {
+    background-color: #ECF0F1;
+    width: 900px;
+    height: 8px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 1;
+    top: 40px;
+    left: 0;
+}
+
+.schedule-line-now {
+    background-color: #f50;
+    height: 8px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 2;
+    top: 40px;
+    left: 0;
+}
+
+.schedule-line-now em {
+    background-image: -ms-linear-gradient(right, #ECF0F1 0%, #f50 100%) /* IE10 Consumer Preview */;
+    background-image: -moz-linear-gradient(right, #ECF0F1 0%, #f50 100%) /* Mozilla Firefox */;
+    background-image: -o-linear-gradient(right, #ECF0F1 0%, #f50 100%) /* Opera */;
+    background-image: -webkit-gradient(linear, right top, left top, color-stop(0, #ECF0F1), color-stop(1, #f50)) /* Webkit (Safari/Chrome 10) */;
+    background-image: -webkit-linear-gradient(right, #ECF0F1 0%, #f50 100%) /* Webkit (Chrome 11+) */;
+    background-image: linear-gradient(to left, #ECF0F1 0%, #f50 100%) /* W3C Markup, IE10 Release Preview */;
+    display: block;
+    width: 60px;
+    height: 8px;
+    float: right;
+}
+
+.schedule-point-bg {
+    position: absolute;
+    z-index: 3;
+    top: 32px;
+    left: 0;
+}
+
+.schedule-point-bg span {
+    background-color: #FFF;
+    display: block;
+    width: 24px;
+    height: 24px;
+    float: left;
+    margin-left: 232px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+}
+
+.schedule-point-bg span.a {
+    margin-left: 50px;
+}
+
+.schedule-point-now {
+    position: absolute;
+    z-index: 4;
+    top: 36px;
+    left: 0;
+}
+
+.schedule-point-now span {
+    background-color: #ECF0F1;
+    display: block;
+    width: 16px;
+    height: 16px;
+    float: left;
+    margin-left: 240px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+}
+
+.schedule-point-now span.a {
+    margin-left: 54px;
+}
+
+.schedule-text {
+    width: 900px;
+    height: 30px;
+    position: absolute;
+    z-index: 4;
+    top: 66px;
+    left: 0;
+}
+
+.schedule-text span {
+    font-size: 14px;
+    color: #BEC3C7;
+    text-align: center;
+    display: block;
+    width: 90px;
+    float: left;
+    margin-left: 167px;
+}
+
+.schedule-text span.a {
+    margin-left: 16px;
+}
+
+#step1 .schedule-ico span.a {
+    background-position: -120px 0;
+}
+
+#step1 .schedule-line-now {
+    width: 200px;
+}
+
+#step1 .schedule-point-now span.a {
+    background-color: #f50;
+}
+
+#step1 .schedule-text span.a {
+    font-weight: 600;
+    color: #f50;
+}
+.btn-next{
+    width:15%;
+    margin: 0 auto;
+    text-align: center;
+}
+.btn-next a {
+    margin-left:10px;
 }
