--- a/webinstall/install/css/style.css
+++ b/webinstall/install/css/style.css
@@ -121,12 +121,24 @@ em {
 }
 
 .schedule-line-now em {
-    background-image: -ms-linear-gradient(right, #ECF0F1 0%, #f50 100%) /* IE10 Consumer Preview */;
-    background-image: -moz-linear-gradient(right, #ECF0F1 0%, #f50 100%) /* Mozilla Firefox */;
-    background-image: -o-linear-gradient(right, #ECF0F1 0%, #f50 100%) /* Opera */;
-    background-image: -webkit-gradient(linear, right top, left top, color-stop(0, #ECF0F1), color-stop(1, #f50)) /* Webkit (Safari/Chrome 10) */;
-    background-image: -webkit-linear-gradient(right, #ECF0F1 0%, #f50 100%) /* Webkit (Chrome 11+) */;
-    background-image: linear-gradient(to left, #ECF0F1 0%, #f50 100%) /* W3C Markup, IE10 Release Preview */;
+    background-image: -ms-linear-gradient(right, #ECF0F1 0%, #f50 100%)
+        /* IE10 Consumer Preview */
+    ;
+    background-image: -moz-linear-gradient(right, #ECF0F1 0%, #f50 100%)
+        /* Mozilla Firefox */
+    ;
+    background-image: -o-linear-gradient(right, #ECF0F1 0%, #f50 100%)
+        /* Opera */
+    ;
+    background-image: -webkit-gradient(linear, right top, left top, color-stop(0, #ECF0F1), color-stop(1, #f50))
+        /* Webkit (Safari/Chrome 10) */
+    ;
+    background-image: -webkit-linear-gradient(right, #ECF0F1 0%, #f50 100%)
+        /* Webkit (Chrome 11+) */
+    ;
+    background-image: linear-gradient(to left, #ECF0F1 0%, #f50 100%)
+        /* W3C Markup, IE10 Release Preview */
+    ;
     display: block;
     width: 60px;
     height: 8px;
@@ -241,27 +253,15 @@ em {
     width: 440px;
 }
 
-#step2 .schedule-point-now span.a, #step2 .schedule-point-now span.b {
+#step2 .schedule-point-now span.a,
+#step2 .schedule-point-now span.b {
     background-color: #f50;
 }
 
-#step2 .schedule-text span.a, #step2 .schedule-text span.b {
+#step2 .schedule-text span.a,
+#step2 .schedule-text span.b {
     font-weight: 600;
     color: #f50;
-}
-
-.select_system {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    /*flex-direction: ;*/
-}
-
-.select_system .form-group {
-    width: 25%;
-    /*width:25%;*/
-    height: 200px;
-    border: 1px solid red;
 }
 
 #step3 .schedule-ico span.a {
@@ -280,11 +280,15 @@ em {
     width: 680px;
 }
 
-#step3 .schedule-point-now span.a, #step3 .schedule-point-now span.b, #step3 .schedule-point-now span.c {
+#step3 .schedule-point-now span.a,
+#step3 .schedule-point-now span.b,
+#step3 .schedule-point-now span.c {
     background-color: #f50;
 }
 
-#step3 .schedule-text span.a, #step3 .schedule-text span.b, #step3 .schedule-text span.c {
+#step3 .schedule-text span.a,
+#step3 .schedule-text span.b,
+#step3 .schedule-text span.c {
     font-weight: 600;
     color: #f50;
 }
@@ -313,12 +317,48 @@ em {
     display: none;
 }
 
-#step4 .schedule-point-now span.a, #step4 .schedule-point-now span.b, #step4 .schedule-point-now span.c, #step4 .schedule-point-now span.d {
+#step4 .schedule-point-now span.a,
+#step4 .schedule-point-now span.b,
+#step4 .schedule-point-now span.c,
+#step4 .schedule-point-now span.d {
     background-color: #f50;
 }
 
-#step4 .schedule-text span.a, #step4 .schedule-text span.b, #step4 .schedule-text span.c, #step4 .schedule-text span.d {
+#step4 .schedule-text span.a,
+#step4 .schedule-text span.b,
+#step4 .schedule-text span.c,
+#step4 .schedule-text span.d {
     font-weight: 600;
     color: #f50;
 }
 
+.model_list {
+    height: 200px;
+    text-align: center;
+}
+
+.model_list:hover {
+    background-color: #7E8C8D;
+    color: #FFF;
+}
+
+.model_list:hover p {
+    color: #FFF;
+}
+
+.model_list:hover h4 {
+    color: #FFF;
+}
+
+.model_list span {
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 5em;
+}
+
+.model_list p:last-child {
+    text-align: left;
+    margin-bottom: 10px;
+    display: block
+}
